fix dialog alignment

--- a/client_v3/src/common/ui/Dialog/Dialog.pcss
+++ b/client_v3/src/common/ui/Dialog/Dialog.pcss
@@ -23,12 +23,11 @@
     -webkit-overflow-scrolling: touch;
     outline: 0;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
 
     @media (min-width: 1024px) {
         top: 0;
-        align-items: center;
     }
 }
 
@@ -38,7 +37,6 @@
 
     @media (min-width: 1024px) {
         top: 0;
-        align-items: center;
     }
 }
 
